--- a/filefabric.css
+++ b/filefabric.css
@@ -47,6 +47,7 @@
 	height: 18px!important;
 	width: 18px!important;
 	cursor: pointer;
+	vertical-align: middle;
 }
 
 .ff-unchecked{
@@ -88,4 +89,27 @@ tr.ff-selected{
 	/* Required to make elements draggable in old WebKit */
 	-khtml-user-drag: element;
 	-webkit-user-drag: element;
+}
+
+.ff-header-menu div{
+	display: inline-block;
+}
+
+.ff-header-menu .ff-header-content{
+	cursor: pointer;
+	padding: 4px;
+}
+
+.ff-header-menu .ff-header-content:hover{
+	box-shadow: rgba(0,0,0,0.09804) 0 0 1px,rgba(0,0,0,0.14902) 0 1px 5px;
+}
+
+.ff-dd-arrow{
+	width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 5px solid #A8A8A8;
+	margin-left: 4px;
+	margin-bottom: 2px;	
 }
